# fontofweb

./: .gitignore  mint.json
api/: .env  Cargo.toml  db.sql3  schema.dbml  servo.css
api/.sqlx/: query-ce2b142704d9533c7287425f71d361b40ea992ffcc43c654d387cf77fdb9f216.json
api/src/: db.rs  db_init.sql  main.rs  mock.sql
api/src/detect/: document.rs  element.rs  layout_dom.rs  mod.rs  node.rs  servo_test.rs  stylesheet.rs  user-agent.css
api/src/entities/: font_info.rs  mod.rs  page.rs
api/src/routes/: macros.rs  mod.rs
api/src/routes/page/: mod.rs  report.rs
api/src/routes/usage/: by_page.rs  mod.rs
assets/: head.html
frontend-v2-cloudflare/: crawler.js  notes.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
frontend-v2-cloudflare/app/routes/: _index.tsx
frontend_v2/: package-lock.json  package.json
frontend_v2/app/: tailwind.css
frontend_v2/app/routes/: _index.tsx  crawl.$url.tsx
source/: Main.mint  colors.mint
source/Entities/: FontCardUtils.mint  Report.mint
source/components/: AnalyzeInput.mint  FontBackground.mint  FontCard.mint  FontSummaryCard.mint  Footer.mint  Loader.mint  Logo.mint
source/navigation/: navigation.mint
source/pages/: Landing.mint  Result.mint
source/pages/navigation/: navigation.mint
