[package]
name = "fontofweb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
freetype-rs = "0.37.0"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
reqwest = "0.12.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.17"
fonttools = "0.1.0"
woff2 = "0.3.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
axum-typed-routing-macros = "0.2.1"
env_logger = "0.11.5"
log = "0.4.22"


[profile.dev.package.sqlx-macros]
opt-level = 3
